Added bootstrap and customization

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,4 @@
-<h1>About us</h1>
-<p>Learning about Rails... </p>
+<div class ="jumbotron">
+	<h1>About us</h1>
+	<p>Learning about Rails... </p>
+</div>
