--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,6 @@
+
+<div class = "jumbotron" >
 <h1>Welcome!!!</h1>
 <!--<p>Sign Up <a href="#">Here</a></p> -->
-<p>Sign up <%= link_to "here" , "#" %></p>
+<p>Click here to <%= link_to "Sign Up" , "#" , class: "btn btn-primary" %></p>
+</div>
