--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,5 +2,7 @@
 <div class = "jumbotron" >
 <h1>Welcome!!!</h1>
 <!--<p>Sign Up <a href="#">Here</a></p> -->
-<p>Click here to <%= link_to "Sign Up" , "#" , class: "btn btn-primary" %></p>
+  <%= link_to "Log in", "#", class: "btn btn-default btn-lg" %>
+	<%= link_to "Sign Up", "#", class: "btn btn-primary btn-lg" %>
+
 </div>
