--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,11 @@
 
 <div class = "jumbotron" >
 <h1>Welcome!!!</h1>
-<!--<p>Sign Up <a href="#">Here</a></p> -->
-  <%= link_to "Log in", "#", class: "btn btn-default btn-lg" %>
-	<%= link_to "Sign Up", "#", class: "btn btn-primary btn-lg" %>
+<% if user_signed_in? %>
+
+<% else %>
+  <%= link_to "Log in", new_user_session_path, class: "btn btn-default btn-lg" %>
+	<%= link_to "Sign Up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
+<% end %>
 
 </div>
