--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -10,6 +10,7 @@
       <thead>
         <tr>
           <th>Description</th>
+          <th>User</th>
           <th colspan="3"></th>
         </tr>
       </thead>
@@ -19,9 +20,13 @@
           <% @pins.each do |pin| %>
             <tr>
               <td><%= pin.description %></td>
+              <td><%= pin.user.email if pin.user %></td>
               <td><%= link_to 'Show', pin %></td>
-              <td><%= link_to 'Edit', edit_pin_path(pin) %></td>
-              <td><%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
+              <% if pin.user == current_user %>
+                <td><%= link_to 'Edit', edit_pin_path(pin) %></td>
+                <td><%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+              <% end %>
             </tr>
           <% end %>
         </tbody>
@@ -30,7 +35,9 @@
   <div class = "panel-heading">
 
 
-  <div class = "panel-footer">
-    <%= link_to 'New Pin', new_pin_path %>
-  </div>
+  <% if user_signed_in? %>
+    <div class = "panel-footer">
+      <%= link_to 'New Pin', new_pin_path %>
+    </div>
+  <% end %>
 </div>
