--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -1,7 +1,6 @@
 
 <div class = "panel panel-default">
-		<p id="notice"><%= notice %></p>
-
+	<%= image_tag @pin.image.url (:medium)%>
 	<div class = "panel-heading">
 		<p>
 		  <strong>Description:</strong>
