--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -1,17 +1,22 @@
-
-<div class = "panel panel-default">
-	<%= image_tag @pin.image.url (:medium)%>
-	<div class = "panel-heading">
-		<p>
-		  <strong>Description:</strong>
-		  <%= @pin.description %>
-		</p>
-	</div>
-
-	<div class = "panel-footer">
-		<% if @pin.user == current_user %>
-			<%= link_to 'Edit', edit_pin_path(@pin) %> |
+		<%= link_to pins_path do %>
+			<span class="glyphicon glyphicon-chevron-left">Back</span>
 		<% end %>
-		<%= link_to 'Back', pins_path %>
-	</div>
+		<% if @pin.user == current_user %>
+			| <%= link_to edit_pin_path(@pin) do %>
+				<span class = "glyphicon glyphicon-edit" >Edit</span>
+			<% end %>
+		<% end %>
+
+<div class="row">
+	<div class="col-md-offset-2 col-md-8">
+		<div class = "panel panel-default">
+			<div class = "panel-heading">
+				<%= image_tag @pin.image.url (:medium)%>
+			</div>
+			<div class = "panel-body">
+				<p><b><%= @pin.user.email if @pin.user %></b></p>
+				<p><%= @pin.description %></p>
+			</div>
+		</div>
+	</div>		
 </div>
