--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,11 +1,16 @@
+<%= render 'pages/home' unless user_signed_in?%>
  <div id="pins" class="transitions-enabled">
   <% @pins.each do |pin| %>
+ 
     <div class="box panel panel-default">
       <%= link_to image_tag(pin.image.url (:medium)), pin %>
+ 
       <div class="panel-body">
         <p><%= pin.description %></p>
         <b><%= pin.user.email if pin.user %></b>
+ 
         <% if pin.user == current_user %>
+ 
           <div class="actions">
             <%= link_to edit_pin_path(pin) do %>
               <span class="glyphicon glyphicon-edit"></span> Edit |
@@ -15,7 +20,11 @@
             <% end %>
           </div>
         <% end %>
+     
       </div>
+   
     </div>
+  
   <% end %>
+
 </div>
