--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -10,7 +10,7 @@
 <div class="row">
 	<div class="col-md-offset-2 col-md-8">
 		<div class = "panel panel-default">
-			<div class = "panel-heading">
+			<div class = "panel-heading center">
 				<%= image_tag @pin.image.url (:medium)%>
 			</div>
 			<div class = "panel-body">
